data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1330.wast
;; Sure, here are the test descriptions for differential testing:  1. **Test Description 1:**    - **Focus:** Verify a branch to an imported function.    - **Constraint:** Check if the `br` instruction correctly unwinds the stack before transferring control to an imported function.    - **Incorrect Handling:** Misinterpretation of label indexing or incorrect stack unwinding during transition to an imported function.

(assert_invalid
  (module
    (func $type-br-to-imported-func
      (block
        (i32.const 0)
        (br 1)
      )
      (call 0)
    )
    (import "env" "external_func" (func))
  )
  "unknown label"
)